# msp_2_server

./: docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: events.py
backend/app/routers/: __init__.py  events.py
backend/app/schemas/: events.py
backend/migrations/: README  env.py
backend/migrations/resource/: events.json
backend/migrations/versions/: 197019734697_insert_events.py  5821129c9497_init_table.py
db/init/: 01-create_db.sql
